# Order_CLI

./: .gitignore  LICENSE  PROJECT_CONTEXT.md  README.md  dev-notes.md  install.sh  pyproject.toml  test-new-format.md  test.md
order/: __main__.py  cli.py  markdown_handler.py
tests/: test_markdown_handler.py  test_order_cli.py
